@@ -172,3 +172,4 @@ version 2.8.1:
 	* R446: Updated Slovenian and Italian translation.
 	* R447: Updated Documentation (Authors, Copyright, Dependencies)
 	* R448: Updated German translation.
+	* R450: Bugfix Preview Print: Don't delete preview files too early
